Updated recruitment system with applicant and role management